[package]
name = "todo_ws_actix"
description = "Rust TODO RBATIS API WITH AUTH"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
once_cell = "1.18.0"
actix-web-middleware-keycloak-auth = "0.4.1"
awc = { version = "3.2.0" }

rbs = { version = "4.5.1" }
rbatis = { version = "4.5.3", features = ["debug_mode"] }
rbdc-pg = { version = "4.5.1" }

log = "0.4.20"
fast_log = "1.6.10"
serde_json = "1.0.108"